--- a/package.json
+++ b/package.json
@@ -6,29 +6,28 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|        @expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|        react-native-svg)"
-    ]
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^52.0.23",
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/native": "^7.0.14",
+    "@testing-library/react-native": "^12.9.0",
+    "axios": "^1.7.9",
+    "expo": "~52.0.23",
+    "expo-font": "^13.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-svg": "^15.10.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@testing-library/react-native": "^12.9.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.0.2",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "private": true
 }
