--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.2",
     "typescript": "^5.7.2"
