--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "15.8.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.2",
+    "@types/react": "18.3.12",
     "@types/react-native": "^0.73.0",
     "jest": "^29.7.0",
     "jest-expo": "^52.0.2",
